# wikiplugin

./: .gitignore  Cargo.toml  LICENSE  README.md  build.py
ftplugin/: wikipluginnote.vim
lua/: wikiplugin.lua
plugin/: wikiplugin.vim
src/: connection.rs  error.rs  lib.rs  main.rs  plugin.rs
src/plugin/: links.rs  markdown.rs  messages.rs  note.rs
syntax/: wikipluginnote.vim
