[package]
name = "wikiplugin_internal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.81"
chrono = "0.4.38"
flexi_logger = "0.28.5"
futures-io = "0.3.30"
glob = "0.3.1"
log = "0.4.22"
markdown = "=1.0.0-alpha.21"
nvim-oxi = { version = "0.5.1", features = ["neovim-0-9", "neovim-0-10"] }
pathdiff = "0.2.1"
regex = "1.11.1"
tokio = "1.38.1"
yaml-rust = "0.4.5"
